tests/src/frontend/syntax/invalid/explicit_targs2.sk
class A<T>(T)

fun test(_: A<Int>): A<Int> {
  A<Bool>(0)
}
